fix(Use Case Participation): alignment ui issue fixed

--- a/src/components/pages/UsecaseParticipation/UsecaseParticipation.scss
+++ b/src/components/pages/UsecaseParticipation/UsecaseParticipation.scss
@@ -68,7 +68,7 @@
     padding: 30px;
   }
   .useCase-list-main {
-    max-width: 850px;
+    max-width: 1200px;
     width: 100%;
     margin: 0 auto 50px;
     .progress-main {
@@ -100,7 +100,7 @@
         .credential-list {
           list-style: none;
           .MuiAccordionSummary-root {
-            padding: 0px 16px 0px 0px;
+            padding: 0px 25px 0px 0px;
           }
           .credential-list-item {
             width: 100%;
